# rust-python-ffi

./: .gitignore  README.md
fib/: Makefile  fibpy.py  test_fib.py
fib/fibc/: fibc.c  setup.py
fib/fibcython/: fibcython.pyx  setup.py
fib/fibpyo3/: Cargo.toml  README.md
fib/fibpyo3/src/: lib.rs
fib/fibrust/: Cargo.toml
fib/fibrust/benches/: bench.rs
fib/fibrust/src/: lib.rs
fib/fibrust_cpython/: Cargo.toml
fib/fibrust_cpython/src/: lib.rs
random4/: Makefile  random4py.py  test_random4.py
random4/random4c/: random4c.c  setup.py
random4/random4cython/: random4cython.pyx  setup.py
random4/random4pyo3/: Cargo.toml
random4/random4pyo3/src/: lib.rs
random4/random4rust_cpython/: Cargo.toml
random4/random4rust_cpython/src/: lib.rs
