[package]
name = "fibrust"
version = "0.1.0"
authors = ["shmuelamar <shmulikamar@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 3

[profile.bench]
lto = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
